[tool.poetry]
name = "cmi-dumper"
version = "1.0.0"
description = "extract data from C.M.I."
authors = ["Alexander Dreweke <thrawn@shadowhunt.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.27.1"
boto3 = "^1.22.10"
psycopg = "^3.0.12"

[tool.poetry.dev-dependencies]
flake9 = "^3.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
