[tool.poetry]
name = "cmi"
version = "1.0.0"
description = "extract data from C.M.I."
authors = ["Alexander Dreweke <thrawn@shadowhunt.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
argparse = "^1.4.0"
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
flake9 = "^3.8.3"
pyupgrade = "^2.37.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
